# cranelift-jit-demo

./: Cargo.toml  README.md  main.c
src/: jit.rs
