[package]
name = "cranelift-jit-demo"
version = "0.0.0"
authors = ["The Cranelift Project Developers"]
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/bytecodealliance/cranelift-jit-demo"
description = "Toy language implemented using cranelift-jit"
edition = "2018"

[dependencies]
peg               = "^0.6"
cranelift         = "^0.96.0"
cranelift-module  = "^0.96.0"
cranelift-jit     = "^0.96.0"
cranelift-native  = "^0.96.0"
cranelift-object  = "^0.96.0"
cranelift-codegen = "^0.96.0"
target-lexicon    = "^0.12.7"
